--- a/main.css
+++ b/main.css
@@ -1,6 +1,48 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Verdana;
+    font-weight: bold;
+}
+
 .header {
+    height: 5vh;
+    min-height: 60px;
+    background-color: rgba(0, 0, 15, 0.9);
+    top: 0;
+    color: white;
     position: fixed;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 999;
+}
+
+.logo {
+    display: flex;
+    padding-left: 3vw;
+    font-size: 2.5vh;
+}
+
+.header ul {
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    outline: none;
+}
+
+.header li {
+    color: white;
+    display: list-item;
+    margin-right: 2vw;
 }
 
 
@@ -8,19 +50,43 @@
     font-size: 10vh;
     text-align: center;
     color: white;
-    padding-top: 40vh;
-    width: auto;
-    height: 99vh;
+    padding-top: 30vh;
+    /*width: auto;*/
+    height: 80vh;
+}
+
+.banner p {
+    margin: 0;
 }
 
 .hallo {
-    font-size: 8vh;
+
+    font-size: 2vh;
     text-align: center;
-    padding-top: 25vh;
+    padding-top: 3vh;
     width: auto;
-    height: 70vh;
-    background-color: lightblue;
+    height: auto;
+    background-color: white;
+    font-weight: bold;
+    padding-bottom: 5vh;
 }
+
+.hallo ul {
+    list-style-type: none;
+    display: flex;
+    width: 80vw;
+    flex-direction: column;
+    justify-content: space-around;
+    height: auto;
+    margin: auto;
+}
+
+.hallo li {
+    width: 30vw;
+}
+
+
+
 
 .parall1 {
     width: auto;
@@ -29,7 +95,7 @@
 
 .about {
 
-    padding-top: 4vh;
+    padding-top: 18vh;
     width: auto;
     height: 70vh;
     background-color: lavender;
@@ -47,12 +113,13 @@
 }
 
 .contact {
-    font-size: 8vh;
+    padding-top: 5vh;
     text-align: center;
-    padding-top: 25vh;
+    font-size: 3vh;
     width: auto;
-    height: 80vh;
-    background-color: azure;
+    height: auto;
+    background-color: mediumpurple;
+    color: white;
 }
 
 .footer {
@@ -61,38 +128,79 @@
     font-size: 2vh;
     color: white;
     height: 15vh;
-    background-color: black;
+    background-color: rgba(0, 0, 5, 0.9);
 }
 
-.carousel-inner h3 {
-    background-color: rgba(20, 49, 68, 0.6);
-    padding: 20px;
-    animation: anime-H3 1.3s ease-out;
-}
-.carousel-inner p {
-    font-size: 18px;
-    background-color: rgba(30,29,29, 0.6);
-    padding: 20px;
-    animation: anime-P 1.6s ease-out;
+ button {
+     outline: none;
+     border-width: 0;
+     margin-top: 2vh;
+    background-color: darkslateblue;
+    border-radius: 20px;
+    /*height: 3vw;*/
+    font-weight: bolder;
+    font-size: 1.3rem;
+    color: lavender;
+    padding: 15px;
 }
 
-@keyframes anime-H3 {
-    from {
-        opacity: 0;
-        transform: translateX(-2000px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-@keyframes anime-P {
-    from {
-        opacity: 0;
-        transform: translateX(2000px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
+ button:focus-within {
+     background-color: lavender;
+     color: darkslateblue;
+
+ }
+
+ input {
+     height: 3.5vh;
+     border-radius: 19px;
+     border-width: 0;
+     padding-left: 1vw;
+     margin-bottom: 2vh;
+ }
+
+ .discr {
+     height: 15vh;
+     border-radius: 18px;
+     padding-left: 1vw;
+     padding-top: 1vh;
+     font-size: 1rem;
+ }
+
+ .hallo li {
+     color: black;
+     font-weight: normal;
+
+ }
+
+ h3 {
+     margin-top: 19vh;
+     color: mediumpurple;
+     font-weight: bolder;
+ }
+
+ .footer ul {
+     list-style-type: none;
+     display: flex;
+     justify-content: center;
+     margin-bottom: 3vh;
+ }
+
+ .footer li {
+     margin-right: 2vw;
+ }
+
+ .post {
+     display: flex;
+     justify-content: center;
+     flex-direction: column;
+     width: 26vh;
+     margin-right: auto;
+     margin-left: auto;
+     padding-top: 5vh;
+     padding-bottom: 4vh;
+ }
+
+ .contact p {
+     margin: auto;
+     width: 60vw;
+ }
