--- a/main.css
+++ b/main.css
@@ -1,7 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
+
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Verdana;
+    font-family:"Open Sans", Arial, Verdana;
     font-weight: bold;
 }
 
@@ -59,33 +61,40 @@ a {
     margin: 0;
 }
 
-.hallo {
 
+.hallo {
     font-size: 2vh;
     text-align: center;
-    padding-top: 3vh;
     width: auto;
     height: auto;
     background-color: white;
     font-weight: bold;
-    padding-bottom: 5vh;
+    padding: 3vh 13vw 5vh;
 }
 
 .hallo ul {
     list-style-type: none;
     display: flex;
-    width: 80vw;
     flex-direction: column;
     justify-content: space-around;
     height: auto;
-    margin: auto;
 }
 
 .hallo li {
-    width: 30vw;
+    width: auto;
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: row;
 }
 
+.right {
+    /*margin-right: 13vw;*/
+}
 
+.left {
+
+    /*margin-left: 12vw;*/
+}
 
 
 .parall1 {
@@ -166,14 +175,8 @@ a {
      font-size: 1rem;
  }
 
- .hallo li {
-     color: black;
-     font-weight: normal;
-
- }
 
  h3 {
-     margin-top: 19vh;
      color: mediumpurple;
      font-weight: bolder;
  }
