--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -54,12 +54,13 @@ a {
 
 
 .banner {
+    font-weight: bolder;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     align-content: center;
     justify-content: center;
-    font-size: 5rem;
+    font-size: 7rem;
     text-align: center;
     color: white;
     width: auto;
@@ -70,14 +71,19 @@ a {
     margin: 0;
 }
 
+.label {
+    border: 6px solid white;
+    padding: 20px;
+}
+
 .arrow {
     font-weight: bolder;
     position: absolute;
     bottom: 0;
     padding: 5px;
-    color: #2a2a2a;
+    color: white;
     font-size: 3rem;
-    background-color: white;
+    background-color: #2a2a2a;
     margin-bottom: 0;
 }
 
@@ -87,12 +93,13 @@ a {
     text-align: center;
     width: auto;
     height: auto;
-    background-color: white;
+    background-color: #2a2a2a;
     font-weight: bold;
     padding: 5vh 3vw;
 }
 
 .hallo p {
+    color: white;
     font-size: 1.4rem;
     margin-left: auto;
     margin-right: auto;
@@ -113,7 +120,8 @@ a {
 }
 
 .hallo h1 {
-    color: blueviolet;
+    font-size: 4rem;
+    color: lightskyblue;
 }
 
 .hallo li {
@@ -159,7 +167,7 @@ a {
     font-size: 2.5rem;
     width: auto;
     height: auto;
-    background-color: mediumpurple;
+    background-color: rgb(0,90,145);
     color: white;
 }
 
@@ -174,12 +182,12 @@ a {
 
  button {
      outline: none;
-     border-width: 0;
-    background-color: darkslateblue;
+     border: 5px solid lightsalmon ;
+    background-color:rgba(0,0,0,0);
     border-radius: 20px;
     font-weight: bolder;
     font-size: 1.3rem;
-    color: lavender;
+    color: lightsalmon;
     padding: 15px;
 }
 
@@ -190,6 +198,9 @@ a {
  }
 
  input {
+     min-width: 250px;
+     max-width: 400px;
+     width: 35vw;
      min-height: 29px;
      outline: none;
      height: 3.9vh;
@@ -201,9 +212,12 @@ a {
  }
 
  .discr {
+     min-width: 250px;
+     max-width: 400px;
+     width: 35vw;
      outline: none;
      border-width: 0;
-     height: 15vh;
+     height: 18vh;
      border-radius: 12px;
      padding-left: 15px;
      padding-top: 1vh;
@@ -212,7 +226,8 @@ a {
 
 
  h3 {
-     color: mediumpurple;
+     font-size: 2.5rem;
+     color: skyblue;
      font-weight: bolder;
  }
 
@@ -230,13 +245,11 @@ a {
 
  .post {
 
-     min-width: 250px;
      display: flex;
+     flex-flow: column nowrap;
+     align-items: center;
+     align-content: center;
      justify-content: center;
-     flex-direction: column;
-     width: 35vw;
-     margin-right: auto;
-     margin-left: auto;
      padding-top: 5vh;
      padding-bottom: 4vh;
  }
