--- a/src/sass/slider.css
+++ b/src/sass/slider.css
@@ -14,7 +14,7 @@
     overflow: hidden;
 }
 .carrousel h2 {
-    color: slateblue;
+    color: #2980b9;
     font-size: 3.5rem;
     margin-top: 0;
     margin-bottom: 12vh;
