--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -162,8 +162,8 @@ a {
     font-size: 2.5rem;
     width: auto;
     height: auto;
-    background-color: rgb(0,90,145);
-    color: white;
+    background-color: #2a2a2a;
+    color: lightskyblue;
 }
 
 .footer {
@@ -177,12 +177,13 @@ a {
 
  button {
      outline: none;
-     border: 5px solid lightsalmon ;
+     border: 5px solid lightpink ;
     background-color:rgba(0,0,0,0);
+     box-shadow: 0 0 15px rgba(202, 228, 225, 0.82);
     border-radius: 20px;
     font-weight: bolder;
     font-size: 1.3rem;
-    color: lightsalmon;
+    color: lightpink;
     padding: 15px;
 }
 
